--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=backend
 server.port=8080
 
-spring.data.mongodb.uri=${MONGO_DB_URI:mongodb://localhost:27017/pharmacydb}
+spring.data.mongodb.uri=mongodb://mongo:FFrgwGPcEDedoeVhNoxSdVGlPAWpDPzX@caboose.proxy.rlwy.net:21450/pharmacydb
