Deploy ready: Atlas MongoDB integrated, passwords secured, Render config added

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=backend
-server.port=8080
 
-spring.data.mongodb.uri=mongodb://mongo:FFrgwGPcEDedoeVhNoxSdVGlPAWpDPzX@caboose.proxy.rlwy.net:21450/pharmacydb
+# Server port: Render provides PORT env var, default to 8080 locally
+server.port=${PORT:8080}
+
+# MongoDB connection: REQUIRED env var for production
+# Set SPRING_DATA_MONGODB_URI in Render dashboard or local .env
+# Example: mongodb+srv://user:pass@cluster.mongodb.net/pharmacydb?retryWrites=true&w=majority
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/pharmacydb}
